# ROS-ATP

./: .gitmodules  LICENSE  README.md  setup.sh  setup_indigo.sh  setup_jade.sh
atp_description/: CMakeLists.txt  package.xml  robot.rviz  setup.py
atp_description/meshes/: robot_arm.stl
atp_description/src/description/: enviroment_setup.py
atp_description/urdf/: ATPBot.urdf.xacro  base.urdf.xacro  laser.urdf.xacro  materials.urdf.xacro
atp_msgs/: CMakeLists.txt  package.xml
atp_utils/: CMakeLists.txt  package.xml
atp_utils/cfg/: BatterySimulator.cfg
atp_utils/launch/: battery_simulator.launch
atp_utils/nodes/: battery_simulator.py  domain_checker.py
parser/: CMakeLists.txt  package.xml  setup.py
parser/src/parser/: domain.py  lispy.py  lispytest.py  parser.py  primitive.py  symbols.py  tokenGenerator.py
parser/src/parser/pddl/: d-zenotravel-V00.pddl  problema2.pddl
parser_pkg/: CMakeLists.txt  package.xml  setup.py
parser_pkg/src/parser_pkg/: domain.py  parser.py  tokenGenerator.py
parser_pkg/src/parserlib/: domain.py  method.py  parser.py  primitive.py  symbols.py  tokenGenerator.py
parser_pkg/src/parserlib/pddl/: d-zenotravel-V00.pddl  dominio1.pddl  dominio2.pddl  problema1.pddl
pfg/: CMakeLists.txt  package.xml
pfg_bringup/: CMakeLists.txt  package.xml
pfg_description/: CMakeLists.txt  package.xml  robot.rviz
pfg_description/launch/: test_pi_robot.launch  test_turtlebot_with_head.launch
pfg_description/src/description/: enviroment_setup.py
pfg_description/urdf/: gazebo.urdf.xacro  turtlebot.urdf.xacro  turtlebot_body.urdf.xacro  turtlebot_hardware.urdf.xacro  turtlebot_hardware.xacro
pfg_msgs/: CMakeLists.txt  package.xml
pfg_msgs/src/pfg_msgs/srv/: _SetBatteryLevel.py
pfg_nav/: CMakeLists.txt  package.xml
pfg_tasks/: CMakeLists.txt  package.xml  setup.py
pfg_tasks/launch/: fake_turtlebot.launch
pfg_tasks/nodes/: clean_house_tree.py  planner_node.py
pfg_tasks/src/pfg_tasks/: black_board.py  core_routines.py  core_tasks.py  factory_methods.py  factory_operators.py  global_vars.py  robotTasks.py  robot_config.py  task_setup.py
pfg_tasks/user_files/: factory_methods.py  factory_operators.py  problema2.pddl  robot_config.py  user_routines.py  user_tasks.py
pfg_tasks/user_files/examples/: factoryDomain.pddl  problema2.pddl
pfg_utils/: CMakeLists.txt  package.xml
pfg_utils/cfg/: BatterySimulator.cfg  Pub3DTarget.cfg
pfg_utils/launch/: battery_simulator.launch  pub_3d_target.launch  pub_tf_frame.launch
pfg_utils/nodes/: battery_simulator.py  domain_checker.py  pub_3d_target.py
pfg_utils/src/pfg_utils/srv/: _KillProcess.py  _LaunchProcess.py  _OldLaunchProcess.py
pyhop_pkg/: CMakeLists.txt  package.xml  setup.py
pyhop_pkg/examples/: factory.py  factory_methods.py  factory_operators.py
pyhop_pkg/pyhop_lib/: CMakeLists.txt  package.xml  setup.py
pyhop_pkg/pyhop_pkg/: CMakeLists.txt  package.xml
pyhop_pkg/src/pyhop_pkg/: pyhop.py
rosatp/: CMakeLists.txt  package.xml
tasks_exec/: CMakeLists.txt  package.xml  setup.py
tasks_exec/examples/: factoryDomain.pddl  problemBasic.pddl  problemMultiPieces.pddl
tasks_exec/launch/: move_base.launch
tasks_exec/nodes/: planner_node.py
tasks_exec/src/tasks/: black_board.py  core_routines.py  core_tasks.py  global_vars.py
tasks_exec/user_files/: robot_config.py  user_routines.py  user_tasks.py
