<package>
  <name>atp_description</name>
  <version>1.0.0</version>

  <maintainer email="theshaljas@gmail.com">José Ángel Segura Muros</maintainer>
  <license>Apache</license>
  <description>Simulation parameters for R.O.S. ATP</description>
  <url type="website">https://github.com/Leontes/ROS-ATP</url>
  <author email="theshaljas@gmail.com">José Ángel Segura Muros</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>

  <export>

  </export>
</package>
