<package>
  <name>parser</name>
  <version>0.1.0</version>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <description>ROS By Example Vol 2 - Tasks</description>
  <url type="website">http://ros.org/wiki/rbx2_tasks</url>
  <url type="bugtracker">https://github.com/pirobot/rbx2/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
