<package>
  <name>pfg</name>
  <version>0.1.0</version>

  <description>ROS By Example Volume 2</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rbx2</url>
  <url type="bugtracker">https://github.com/pirobot/rbx2/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
 
  <run_depend>pfg_tasks</run_depend>
  <run_depend>pfg_msgs</run_depend>
  <run_depend>pfg_utils</run_depend>
  <run_depend>pfg_nav</run_depend>
  <run_depend>pfg_description</run_depend>
  <run_depend>pyhop_pkg</run_depend>
  <run_depend>pi_trees</run_depend>
  
 
  <export>
    <metapackage/>
  </export>

</package>
