<package>
  <name>rosatp</name>
  <version>1.0.0</version>

  <maintainer email="theshaljas@gmail.com">José Ángel Segura Muros</maintainer>
  <license>Apache</license>
  <description>R.O.S. Automatic Task Planner </description>
  <url type="website">https://github.com/Leontes/PFG</url>
  <author email="theshaljas@gmail.com">José Ángel Segura Muros</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
 
  <run_depend>tasks_exec</run_depend>
  <run_depend>atp_msgs</run_depend>
  <run_depend>atp_utils</run_depend>
  <run_depend>atp_description</run_depend>
  <run_depend>pyhop_pkg</run_depend>
  <run_depend>pi_trees</run_depend>
  <run_depend>parser_pkg</run_depend>
  
 
  <export>
    <metapackage/>
  </export>

</package>
